GC Log analysis remake (#178)
* reset frontend and make gcdetail a drawer

* config analysis time period

* remove backend cause, overview and refactor metadata

* refactor: all size unit use Byte with long type in backend

* refactor: extract timedevent

* object statsistics

* refactor metadata

* memory statistics

* give gcdetail a scroll bar

* cleanup gcmodel

* refactor safepoint list and support jdk11 safepoint parsing

* fix gcmodel all events

* make GCLogParserFactory more robust

* make gcpause more accurate

* gc pause

* bump echarts from 4.6.0 to 5.3.3 in /frontend

* remove gcphaseinfo and add gc to eventtype

* rename mixed gc

* refactor event type metadata

* minor fix

* refine code

* minor fix for pause

* phase statistics

* refactor time display format

* imprve pause distribution

* display vm options

* many fixes

* bad memory info check

* make analysis config configable

* improve ui display

* fix time picker issue

* gc log compare main structure (WIP)

* misc

* improve zgc support

* improve memory hint

* pause median

* improve vmoptions display

* object statistics check

* fix pause table not reactive

* gclog compare finished

* fix description

* add bad cause

* misc

* menu and misc

* tinme graph (WIP)

* time graph

* gcoverview and threads

* refactor gccause

* global diagnose(WIP)

* global diagnose backend

* diagnose basic test

* diagnose backend test

* front end and cn

* fix merge problem

* english version

* save option compare

* misc

* refactor package

* misc

* refactor memory data

* adjust style

* p99,999 pause and misc

* copyright

* fix gcdetail style