@@ -13,47 +13,50 @@
 
 package org.eclipse.jifa.gclog.model;
 
-import org.eclipse.jifa.gclog.vo.GCCollectorType;
+import org.eclipse.jifa.gclog.model.modeInfo.GCCollectorType;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.eclipse.jifa.gclog.model.GCEventType.*;
+import static org.eclipse.jifa.gclog.model.GCEventType.FULL_GC;
+import static org.eclipse.jifa.gclog.model.GCEventType.YOUNG_GC;
 
 // If we can not recognize collector of the log, it is very likely to be cms/serial/parallel
 public class UnknownGCModel extends GenerationalGCModel {
 
+    private static GCCollectorType collector = GCCollectorType.UNKNOWN;
+
     public UnknownGCModel() {
-        super(GCCollectorType.UNKNOWN);
+        super(collector);
     }
 
-    private final static List<String> PAUSE_EVENT_NAMES = Arrays.asList(
-            YOUNG_GC.getName(),
-            FULL_GC.getName()
-    );
+    private static List<GCEventType> allEventTypes = GCModel.calcAllEventTypes(collector);
+    private static List<GCEventType> pauseEventTypes = GCModel.calcPauseEventTypes(collector);
+    private static List<GCEventType> mainPauseEventTypes = GCModel.calcMainPauseEventTypes(collector);
+    private static List<GCEventType> parentEventTypes = GCModel.calcParentEventTypes(collector);
+    private static List<GCEventType> importantEventTypes = List.of(YOUNG_GC, FULL_GC);
 
     @Override
-    protected List<String> getPauseEventNames() {
-        return PAUSE_EVENT_NAMES;
+    protected List<GCEventType> getAllEventTypes() {
+        return allEventTypes;
     }
 
-    private final static List<GCEventType> SUPPORTED_PHASE_EVENT_TYPES = Arrays.asList(
-            YOUNG_GC,
-            FULL_GC
-    );
-
     @Override
-    protected List<GCEventType> getSupportedPhaseEventTypes() {
-        return SUPPORTED_PHASE_EVENT_TYPES;
+    protected List<GCEventType> getPauseEventTypes() {
+        return pauseEventTypes;
     }
 
-    private final static List<String> METADATA_EVENT_TYPES = Arrays.asList(
-            YOUNG_GC.getName(),
-            FULL_GC.getName()
-    );
+    @Override
+    protected List<GCEventType> getMainPauseEventTypes() {
+        return mainPauseEventTypes;
+    }
 
     @Override
-    protected List<String> getMetadataEventTypes() {
-        return METADATA_EVENT_TYPES;
+    protected List<GCEventType> getImportantEventTypes() {
+        return importantEventTypes;
+    }
+
+    @Override
+    protected List<GCEventType> getParentEventTypes() {
+        return parentEventTypes;
     }
 }
